# Self-Driving-System-ROS

./: README.md
can_signal_sub/: CMakeLists.txt  package.xml
can_signal_sub/config/: TR23_can_config.json  engine_name_list.txt  imu_name_list.txt  lateral_control.txt  line_fsc_signals.txt  longitudinal_control.txt  test_name_list.txt
can_signal_sub/src/: can_signal_subscriber.cpp  json_read.cpp  jsoncpp.cpp  qnode.cpp
motor_control/: CMakeLists.txt  README.md  package.xml
motor_control/src/: main.cpp  motor_control.cpp
planning/line_fsc/: CMakeLists.txt  README.md  package.xml
planning/line_fsc/src/: main.cpp  (+2 more)
planning/skidpad_detector/: CMakeLists.txt  package.xml
planning/skidpad_detector/config/: skidpad.pcd  skidpad_detector.yaml  theta.txt  vel.txt  velocity.txt
planning/skidpad_detector/include/: skidpad_detector.hpp  skidpad_detector_handle.hpp
planning/skidpad_detector/src/: main.cpp  skidpad_detector.cpp  skidpad_detector_handle.cpp
res_module/: CMakeLists.txt  README.md  package.xml
res_module/src/: main.cpp  res.cpp
tr23_msg/: CMakeLists.txt  package.xml
tr23_msg/msg/: ASStatus.msg  BrakingControl.msg  ClutchControlStatus.msg  EBSMonitoringStatus.msg  EngineControlAim.msg  EngineState.msg  Event.msg  InnerASStatus.msg  LateralControl.msg  Location.msg  LongControlMode.msg  LongitudinalControl.msg  PlannerStatus.msg  ResStatus.msg  SkidpadPlannerStatus.msg  StartSignal.msg  Trajectory.msg  VehicleState.msg
vehicle_communication/: CMakeLists.txt  README.md  package.xml
vehicle_communication/src/: main.cpp  vehicle_communication.cpp
(+9 files in other folders)
